objects/Tour_Outcome__c.object
<CustomObject>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <description>This field captures the information about the unit type in which the prospect is interested in. This information is captured during the Tour Outcome Form.</description>
        <inlineHelpText>This field captures the information about the unit type in which the prospect is interested in.</inlineHelpText>
        <label>Unit Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily Desk</fullName>
                </value>
                <value>
                    <fullName>Dedicated Desk</fullName>
                </value>
                <value>
                    <fullName>Hot Desk</fullName>
                </value>
                <value>
                    <fullName>Labs Desk</fullName>
                </value>
                <value>
                    <fullName>Lounge Membership</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Shared Desk</fullName>
                </value>
                <value>
                    <fullName>We Membership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Deactivation_Updated_On__c</fullName>
        <label>User Deactivation Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Where_do_you_work_currently__c</fullName>
        <label>Where do you work currently</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Different coworking space</fullName>
                </value>
                <value>
                    <fullName>Dedicated office space</fullName>
                </value>
                <value>
                    <fullName>Existing office space our company has elsewhere</fullName>
                </value>
                <value>
                    <fullName>Apartment / home</fullName>
                </value>
                <value>
                    <fullName>Coffee shops / libraries / public spaces</fullName>
                </value>
                <value>
                    <fullName>None, we’re starting a new venture / project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1_Hour_reminder_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1 Hour reminder email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X24_Hours_email_reminder_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When check it creates task under contact</description>
        <label>24 Hours email reminder sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X48_Hours_email_reminder_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>48 Hours email reminder sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>account_uuid__c</fullName>
        <label>account_uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booked_by_contact_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booked By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tours (booked_by_contact_id)</relationshipLabel>
        <relationshipName>Tours4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>company_size__c</fullName>
        <formula>IF(Primary_Member__r.Number_of_Full_Time_Employees__c != NULL , Text(Primary_Member__r.Number_of_Full_Time_Employees__c) , null)</formula>
        <label>Company Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_uuid__c</fullName>
        <label>contact_uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_tour_uuid__c</fullName>
        <label>original_tour_uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_journey_uuid__c</fullName>
        <description>Contains Journey UUID</description>
        <label>sf_journey_uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>utm_campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign_id__c</fullName>
        <label>utm_campaign_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <label>utm_medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>utm_source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uuid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tour</label>
    <nameField>
        <displayFormat>TRO-{0000}</displayFormat>
        <label>Tour Outcome ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tours</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>AMS_Metropool_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <label>AMS-Metropool Last Week</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Next_Week</fullName>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <columns>Tour_Date_Time__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Outcome_Notes__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <label>AMS-Metropool Next Week</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_This_Week</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>AMS-Metropool This Week</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Today</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Tour_Outcome__c</columns>
        <columns>Tour_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>AMS-</value>
        </filters>
        <label>AMS- Wet + Met - Tomorrow</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Today1</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Tour_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>AMS-Metropool Today</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Tomorrow</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>AMS-Metropool Tomorrow</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Tours_This_Month</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <label>AMS - Metropool Tours This Month</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Yesterday</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>AMS-Metropool Yesterday</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Wet_Met_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>BL-</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>BL - HM + SC - This week</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Wet_Met_Next_Week</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>AMS-</value>
        </filters>
        <label>AMS- Wet + Met - Next Week</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Wet_Met_This_week</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>AMS-</value>
        </filters>
        <label>AMS- Wet + Met - This week</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Wet_Met_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Tour_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>AMS-</value>
        </filters>
        <label>AMS- Wet + Met - Yesterday</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Weteringschans_Tours_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Lead__c</columns>
        <columns>Status__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Tour_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Weteringschans</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>AMS - Weteringschans Tours Last Week</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Weteringschans_Tours_Next_Week</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Lead__c</columns>
        <columns>Status__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Tour_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Weteringschans</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <label>AMS - Weteringschans Tours Next Week</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Weteringschans_Tours_This_Week</fullName>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Status__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Weteringschans</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>AMS-Weteringschans Tours This Week</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Lead_or_Opportunity_need_to_be_associate</fullName>
        <active>false</active>
        <description>Either Lead or Opportunity have to associated</description>
        <errorConditionFormula>AND(ISBLANK(Opportunity__c),  ISBLANK(Lead__c))</errorConditionFormula>
        <errorMessage>You have to select either Lead or Opportunity in order to create a Tour</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_record_make_Entry_Type_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISNEW(),
ISBLANK(TEXT( Entry_Type__c ))
)</errorConditionFormula>
        <errorMessage>When creating manual tour Entry Type must be set to Manual</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Tour_Owner_Change</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
Opportunity_RecordType__c = "012n00000004bCT", 
ISCHANGED( OwnerId ), 
OwnerId &lt;&gt; Opportunity__r.OwnerId 
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>You are trying to own a tour which is not associated with your own opportunity. Tour ownership is only allowed for the Tours assigned to your own opportunities.</errorMessage>
    </validationRules>
</CustomObject>